--- a/templates/index.html
+++ b/templates/index.html
@@ -240,14 +240,14 @@
             event.currentTarget.classList.add('active');
         }
 
-        // function isPrime(n) {
-        //     n = parseInt(n);
-        //     if (n < 2) return false;
-        //     for (let i = 2; i * i <= n; i++) {
-        //         if (n % i === 0) return false;
-        //     }
-        //     return true;
-        // }
+        function isPrime(n) {
+            n = parseInt(n);
+            if (n < 2) return false;
+            for (let i = 2; i * i <= n; i++) {
+                if (n % i === 0) return false;
+            }
+            return true;
+        }
         
         function generateKeys() {
             const p = document.getElementById('p').value;
@@ -258,15 +258,15 @@
                 return;
             }
 
-        //      if (!isPrime(p)) {
-        //         alert('First number (p) is not prime');
-        //         return;
-        //     }
+             if (!isPrime(p)) {
+                alert('First number (p) is not prime');
+                return;
+            }
 
-        // if (!isPrime(q)) {
-        //         alert('Second number (q) is not prime');
-        //         return;
-        //     }
+            if (!isPrime(q)) {
+                alert('Second number (q) is not prime');
+                return;
+            }
             
             fetch('/generate_keys', {
                 method: 'POST',
